# ErcotMCPExtension

./: .gitignore  INSTALLATION.md  Makefile  QUICKSTART.md  README.md  debug_api_response.py  manifest.json  pyproject.toml  pytest.ini  requirements.txt  setup.sh  test-forecast-quality.sh  test-inspector.sh
server/: __init__.py  __main__.py  auth.py  client.py  endpoints.py  forecasting.py  load.py  main.py  utils.py
tests/: __init__.py  example_usage.py  test_auth.py  test_endpoints.py  test_forecasting.py  test_rolling_cv.py  test_utils.py
